✨ Add default notification routing
